--- a/shared/css/style.css
+++ b/shared/css/style.css
@@ -47,7 +47,7 @@ h2 {
 
 h5 {
   font-family: "regular";
-  color: var(--white);
+  /* color: var(--white); */
   font-size: 20px;
 }
 
